Edits to background writing

--- a/background.Rmd
+++ b/background.Rmd
@@ -4,7 +4,7 @@ output: html_document
 
 # Background
 
-Our case study centers around issues of racial disparity in criminal sentencing, and is based on research performed by one of this case study's authors. Before proceeding, take some time to read the original study, [Federal Criminal Sentencing: Race-Based Disparate Impact and Differential Treatment in Judicial Districts](https://www.nature.com/articles/s41599-023-01879-5). There may be some things in the paper that you don't understand — perhaps just a few, or perhaps many. That's ok. The goal of reading the paper is not to understand every detail, but rather, to provide a first exposure to the material you'll be working on and to get you excited about it. For convenience, here is the abstract.
+Our case study centers around issues of racial disparity in criminal sentencing, and is based on research performed by one of this case study's authors. Before proceeding, take some time to read the original study, [Federal Criminal Sentencing: Race-Based Disparate Impact and Differential Treatment in Judicial Districts](https://www.nature.com/articles/s41599-023-01879-5). There may be some things in the paper that you don't understand — perhaps just a few, or perhaps many. That's ok. The goal of reading the paper is not to understand every detail, but rather to provide a first exposure to the material you'll be working on and to get you excited about it. For convenience, here is the abstract.
 
 ---
 
@@ -14,7 +14,7 @@ Race-based inequity in federal criminal sentencing is widely acknowledged, and y
 
 ---
 
-In this case study, we won't cover all of the results, but we will cover some of the very most important ones.
+In this case study, we won't cover all of the results, but we will cover some of the most important ones.
 
 ## Motivation
 
@@ -40,7 +40,7 @@ The district courts are the workhorses of the federal judiciary, handling the va
 
 Above the district courts are the United States courts of appeals. These courts are divided into 12 regional circuits across America, each of which hears appeals from the district courts located within its circuit. There's also the Court of Appeals for the Federal Circuit, which has nationwide jurisdiction to hear appeals in specialized cases, such as those involving patent laws and cases decided by the U.S. Court of International Trade and the U.S. Court of Federal Claims.
 
-At the pinnacle of the federal court system is the Supreme Court of the United States. It is currently composed of nine justices, though some argue that the court should be expanded. The Supreme Court mainly hears appeals from the circuit courts and state supreme courts, but it also has original jurisdiction over a small range of cases.
+At the pinnacle of the federal court system is the Supreme Court of the United States, composed of nine justices. The Supreme Court mainly hears appeals from the circuit courts and state supreme courts, but it also has original jurisdiction over a small range of cases.
 
 Federal judges, including Supreme Court justices, are nominated by the President and confirmed by the Senate. They serve "during good behavior," which effectively means they can hold their positions for life. A federal judge may also exit office through voluntary retirement or resignation. 
 
@@ -52,18 +52,18 @@ As of 2021, there were about 677 federal district court judgeships. These judges
 
 In this module, we are considering sentencing patterns, and possible bias, in criminal cases adjudicated in the federal district courts from 2006--2020. You might wonder what sorts of cases end up in these courts. The cases are restricted to those that involve federal statutes, interpretations of the US Constitution, or more than one state.
 
-In criminal cases resulting in a conviction, the crime statute itself may have sentencing restrictions, but beyond those, a judge has literally complete freedom in setting the length of the prison term. We will examine data at the national level as well as within individual districts, with an eye for detecting possible racial bias.
+In criminal cases resulting in a conviction, the crime statute itself may have sentencing restrictions, but beyond those, a judge has complete freedom in setting the length of the prison term. We will examine data at the national level as well as within individual districts, with an eye for detecting possible racial bias.
 
-In 1987, the United States Sentencing Commission created sentencing guidelines for Federal Courts.  These guidelines prescribe a range of possible prison terms, taking into account both the severity of the crime and the prior criminal history of the defendant, as well as numerous possible mitigating factors (ones that may call for shortening the sentence) and aggravating factors (ones that may call for lengthening the sentence).  Although these guidelines were initially mandatory, in 2005 a Supreme Court ruling changed them to being only advisory, returning great freedom in sentencing to each individual judge.
+In 1987, the United States Sentencing Commission created sentencing guidelines for Federal Courts. These guidelines prescribe a range of possible prison terms, taking into account both the severity of the crime and the prior criminal history of the defendant, as well as numerous possible mitigating factors (ones that may call for shortening the sentence) and aggravating factors (ones that may call for lengthening the sentence). Although these guidelines were initially mandatory, a 2005 Supreme Court ruling changed them to being only advisory, returning great freedom in sentencing to each individual judge.
 
 ## Introduction to the data
 
-We will analyze the over one-half million sentencing records spanning the years 2006 to 2020 provided by the US Sentencing Commission.  Publicly available data is usually quite messy, with many missing and ambiguous entries.  For this reason, you will be using a curated copy, that is, one that has been "cleaned up."  (Directions for obtaining the curated copy is in the following section of this module.)  The sentence lengths we are using are given in months and do not include probation nor alternative confinement. Since our aim is to compare lengths of prison sentences imposed, we have eliminated from the data set any cases involving non-citizens, those sentences frequently involve deportation, which is not comparable to prison terms.  We combined the information from some variables (creating new variables) and eliminated incomplete data items, that is entire records, for defendants for whom we are not given sufficient information.  We have eliminated the (relatively few) records with sentence lengths of more than 470 months, but retained those with life sentences, which have been coded by the Commission as 470 months.  Finally, because there are very few defendants sentenced in the district court of the Northern Mariana Islands, those items were also eliminated.
+We will analyze the over one-half million sentencing records spanning the years 2006 to 2020 provided by the U.S. Sentencing Commission.  Publicly available data is usually quite messy, with many missing and ambiguous entries. For this reason, you will be using a curated copy, that is, one that has been "cleaned up" (Directions for obtaining the curated copy is in the following section of this module). The sentence lengths we are using are given in months and do not include probation nor alternative confinement. Since our aim is to compare lengths of prison sentences imposed, we have eliminated from the data set any cases involving non-citizens--those sentences frequently involve deportation, which is not comparable to prison terms. We combined the information from some variables (creating new variables) and eliminated incomplete data items, that is entire records, for defendants for whom we are not given sufficient information.  We have eliminated the (relatively few) records with sentence lengths of more than 470 months, but retained those with life sentences, which have been coded by the Commission as 470 months.  Finally, because there are very few defendants sentenced in the district court of the Northern Mariana Islands, those items were also eliminated.
 
-The data come from two sources: the pre-sentencing report and the Statement of Reasons.  The pre-sentencing report is prepared by the District's Probation Office and based on a post-trial, pre-sentencing investigation including an interview with the defendant.  A draft of this report is issued to the attorneys for comments and corrections and a final version is given to the attorneys and judge.  The Statement of Reasons is a form filled out by the judge explaining/supporting the sentence imposed.
+The data come from two sources: the pre-sentencing report and the Statement of Reasons. The pre-sentencing report is prepared by the District's Probation Office and based on a post-trial, pre-sentencing investigation including an interview with the defendant. A draft of this report is issued to the attorneys for comments and corrections and a final version is given to the attorneys and judge. The Statement of Reasons is a form filled out by the judge explaining/supporting the sentence imposed.
 
-The two main variables used in the non-mandatory guidelines for sentencing are criminal history (`criminal_history`) and an indicator of the severity of the crime (`all_adjustments`).  The two are combined, using a table, to determine the recommended range of the sentence.
+The two main variables used in the non-mandatory guidelines for sentencing are criminal history (`criminal_history`) and an indicator of the severity of the crime (`all_adjustments`). The two variables are combined, using a table, to determine the recommended range of the sentence.
 
-The variable `criminal_history` is coded as a value 1--6, with 1 including a defendant with at most one conviction, where that conviction resulted in a sentence of less than 60 days.  Prior convictions are assigned "points," depending on the number of prior convictions, length(s) of sentence(s), and whether or not past crimes involved violence.  The points are then summed and translated into a "criminal history category," represented by the criminal_history values 1 through 6.  As an additional example, a defendant has  three prior convictions with sentences of over 13 months and two with sentences between 2 and 13 months would be assigned a total of 13 points, yielding the criminal history category 6.  With only one prior conviction of each type, the category would be 3.  The calculation is not quite this simple, with many adjustments and some types of convictions and very old convictions being ignored.
+The variable `criminal_history` is coded as a value 1--6, with 1 including a defendant with at most one conviction, where that conviction resulted in a sentence of less than 60 days.  Prior convictions are assigned "points," depending on the number of prior convictions, length(s) of sentence(s), and whether or not past crimes involved violence.  The points are then summed and translated into a "criminal history category," represented by the `criminal_history` values 1 through 6.  As an additional example, a defendant who has three prior convictions with sentences of over 13 months and two with sentences between 2 and 13 months would be assigned a total of 13 points, yielding the criminal history category 6. With only one prior conviction of each type, the category would be 3. The calculation is not quite this simple, with many adjustments and some types of convictions and very old convictions being ignored.
 
-The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge.  There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4.
+The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4.
