Clean EDA code and writing, remove original exploration from master

--- a/master.Rmd
+++ b/master.Rmd
@@ -38,7 +38,7 @@ This project was begun at the Institute for Computational and Experimental Resea
 ```{r child = "sentencing-eda.Rmd"}
 ```
 
-```{r child = "Exploration.Rmd"}
+```{r child = "Exploration.Rmd", eval = FALSE}
 ```
 
 ```{r child = "analysis.Rmd"}
