--- a/sentencing-eda.Rmd
+++ b/sentencing-eda.Rmd
@@ -4,6 +4,8 @@ output: html_document
 
 # Data exploration
 
+When given a new dataset, you want to read in the data so you can view it in RStudio and perform an Exploratory Data Analysis (EDA). 
+
 ## Reading in the data
 
 First you will want to read in your data. You can do this using `read_csv()` and creating a variable named `us_sent` that refers to the dataset. To view the data as a spreadsheet in a new tab within RStudio, you can use the `View()` function. Because this is an interactive RStudio function that doesn't work when we knit the document, we have set up our document so that the code can be viewed below but not actually run when we knit (specifically, we used the code chunk option `eval = FALSE`). 
@@ -73,7 +75,7 @@ Using this final output from `glimpse()` we can try to identify which variables 
 
 A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system.
 
-In this dataset, as you may have guessed, we have four variables that are related to identity: `age`, `sex`, `educ` (education), and `race`. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023).
+In this dataset, as you may have guessed, we have four variables that are related to identity: `age`, `sex`, `educ` (education), and `race`. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). 
 
 #### Sex 
 
@@ -200,6 +202,8 @@ Bringing in the spatial district files
 
 
 ### What
+
+Moving on to answering the "What?" question about our data. You might have guessed that `sentence_length` and `mandatory_min` are the variables that fall under this category. 
 
 #### How does sentence length correlate with criminal history? {.tabset}
 
